<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

  <ImageView
          android:id="@+id/loginScreenBackgroundImageView"
          android:layout_width="0dp"
          android:layout_height="0dp"
          android:scaleType="centerCrop"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintHorizontal_bias="0.0"
          app:layout_constraintLeft_toLeftOf="parent"
          app:layout_constraintRight_toRightOf="parent"
          app:layout_constraintTop_toTopOf="parent"
          app:layout_constraintVertical_bias="0.0"
          app:srcCompat="@drawable/login_background_image"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintEnd_toEndOf="parent" />


  <TextView
          android:id="@+id/pleaseLoginTextView"
          style="@style/LandingTextView.Link"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/landscreen_logIn"
          android:layout_marginBottom="@dimen/padding_small"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintBottom_toBottomOf="parent" />

  <TextView
          android:id="@+id/alreadyHaveAccountText"
          style="@style/LandingTextView.Normal"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/validation_alreadyHaveAnAccount"
          android:layout_marginBottom="@dimen/small"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintBottom_toTopOf="@+id/pleaseLoginTextView" />

  <android.support.v7.widget.CardView
          android:id="@+id/cardView"
          style="@style/RegistrationCardView"
          android:layout_width="0dp"
          android:layout_height="0dp"
          android:layout_marginBottom="@dimen/margin_terms_title"
          android:layout_marginTop="@dimen/margin_terms_title"
          app:layout_constraintBottom_toTopOf="@+id/alreadyHaveAccountText"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/scrollToText"
          app:layout_constraintVertical_bias="0.0">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

      <TextView
              style="@style/HeaderTextView"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginLeft="@dimen/margin_16dp"
              android:layout_marginRight="@dimen/margin_16dp"
              android:layout_marginTop="@dimen/margin_16dp"
              android:text="@string/terms_digitalServices"
              android:textColor="@color/nearBlack" />

      <TextView
              android:id="@+id/viewPrivacyStatementTextView"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginBottom="@dimen/margin_16dp"
              android:layout_marginLeft="@dimen/margin_16dp"
              android:layout_marginRight="@dimen/margin_16dp"
              android:layout_marginTop="@dimen/padding_small"
              android:textAlignment="center"
              android:lineSpacingMultiplier="1.5"
              android:textSize="@dimen/text_size_13sp"
              android:text="@string/terms_privacyStatement"
              android:textColor="@color/color_black" />

      <View
              android:layout_width="match_parent"
              android:layout_height="@dimen/small_trip_space"
              android:layout_marginLeft="@dimen/padding_small"
              android:layout_marginRight="@dimen/padding_small"
              android:background="@color/colorPrimaryDark" />

      <WebView
              android:id="@+id/termsAndConditionsWebView"
              android:layout_width="match_parent"
              android:layout_height="0dp"
              android:layout_weight="1"
              android:background="@color/transparent" />

      <View
              android:layout_width="match_parent"
              android:layout_height="@dimen/small_trip_space"
              android:background="@color/colorPrimaryDark" />

      <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="horizontal">

        <Button
                android:id="@+id/buttonTermsAndServicesDecline"
                style="@style/RegistrationCardViewButton"
                android:layout_width="match_parent"
                android:textColor="@color/colorPrimaryDark"
                android:layout_height="@dimen/button_height_terms"
                android:layout_weight=".5"
                android:enabled="true"
                android:text="@string/terms_button_decline_title" />

        <View
                android:layout_width="@dimen/small_trip_space"
                android:layout_height="match_parent"
                android:background="@color/colorPrimaryDark" />

        <Button
                android:id="@+id/buttonTermsAndServicesAccept"
                style="@style/RegistrationCardViewButton"
                android:layout_width="match_parent"
                android:textColor="@color/colorPrimaryDark"
                android:layout_height="@dimen/button_height_terms"
                android:layout_weight=".5"
                android:enabled="true"
                android:text="@string/terms_button_accept_title" />

      </LinearLayout>

    </LinearLayout>

  </android.support.v7.widget.CardView>

  <TextView
          android:id="@+id/scrollToText"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:gravity="center"
          android:paddingStart="@dimen/padding_medium_smaller"
          android:paddingEnd="@dimen/padding_medium"
          app:layout_constraintStart_toStartOf="@id/cardView"
          app:layout_constraintEnd_toEndOf="@id/cardView"
          android:text="@string/terms_page_title"
          android:textColor="@color/color_white"
          android:textSize="@dimen/text_size_18sp"
          app:layout_constraintHorizontal_bias="0.505"
          app:layout_constraintTop_toTopOf="parent"
          android:layout_marginTop="@dimen/margin_16dp" />

</android.support.constraint.ConstraintLayout>