<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LogInActivity">

  <ImageView
          android:id="@+id/loginScreenBackgroundImageView"
          android:layout_width="0dp"
          android:layout_height="0dp"
          android:scaleType="centerCrop"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintHorizontal_bias="0.0"
          app:layout_constraintLeft_toLeftOf="parent"
          app:layout_constraintRight_toRightOf="parent"
          app:layout_constraintTop_toTopOf="parent"
          app:layout_constraintVertical_bias="0.0"
          app:srcCompat="@drawable/login_background_image"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintEnd_toEndOf="parent" />

  <android.support.design.widget.TextInputLayout
          android:id="@+id/inputLayoutUserEmail"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintHorizontal_bias="0.0"
          android:layout_marginBottom="@dimen/margin_24dp"
          app:layout_constraintBottom_toTopOf="@+id/inputLayoutUserPassword"
          android:theme="@style/TextInputLabelTheme">

    <EditText
            android:id="@+id/editTextUserEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_e_mail_hint"
            tools:text="UserEmail@gmail.com"
            android:maxLines="1"
            android:singleLine="true"
            android:lines="1"
            android:textSize="@dimen/text_size_20sp"
            android:gravity="center_horizontal"
            android:background="@drawable/btm_line_shape"
            android:textColor="@color/color_black" />

  </android.support.design.widget.TextInputLayout>

  <android.support.design.widget.TextInputLayout
          android:id="@+id/inputLayoutUserPassword"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintHorizontal_bias="0.0"
          android:theme="@style/TextInputLabelTheme"
          android:layout_marginBottom="8dp"
          app:layout_constraintBottom_toTopOf="@+id/checkBox">

    <EditText
            android:id="@+id/editTextUserPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_password_hint"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true"
            android:gravity="center_horizontal"
            android:lines="1"
            tools:text="12345"
            android:background="@drawable/btm_line_shape"
            android:textSize="@dimen/text_size_20sp"
            android:textColor="@color/color_black" />

  </android.support.design.widget.TextInputLayout>

  <Button
          android:text="@string/sign_in"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          android:background="@drawable/round_corners_button"
          android:id="@+id/buttonSignIn"
          android:layout_marginEnd="@dimen/margin_32dp"
          android:textColor="@color/color_white"
          android:layout_marginStart="@dimen/margin_32dp"
          app:layout_constraintHorizontal_bias="1.0"
          android:layout_marginBottom="@dimen/margin_24dp"
          app:layout_constraintBottom_toTopOf="@+id/textViewSignUpQuestion" />

  <TextView
          android:text="@string/sign_up_question"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:textColor="@color/color_white"
          android:id="@+id/textViewSignUpQuestion"
          app:layout_constraintBottom_toBottomOf="parent"
          android:layout_marginBottom="@dimen/margin_16dp"
          app:layout_constraintStart_toEndOf="@+id/loginScreenBackgroundImageView"
          app:layout_constraintHorizontal_bias="0.5"
          app:layout_constraintEnd_toStartOf="@+id/textViewSignUp" />

  <TextView
          android:text="@string/sign_up"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          app:layout_constraintBottom_toBottomOf="parent"
          android:layout_marginBottom="@dimen/margin_16dp"
          android:id="@+id/textViewSignUp"
          android:textColor="@color/colorPrimary"
          app:layout_constraintStart_toEndOf="@+id/textViewSignUpQuestion"
          android:layout_marginStart="@dimen/margin_8dp"
          app:layout_constraintHorizontal_bias="0.5"
          app:layout_constraintEnd_toStartOf="@+id/loginScreenBackgroundImageView"
          android:textStyle="bold" />

  <ImageView
          android:layout_width="@dimen/common_logo_image_width"
          android:layout_height="@dimen/common_logo_image_height"
          app:srcCompat="@mipmap/itinerarium_icon"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          android:id="@+id/imageViewLogo"
          android:layout_marginBottom="@dimen/margin_24dp"
          app:layout_constraintBottom_toTopOf="@+id/inputLayoutUserEmail" />

  <CheckBox
          android:text="@string/remember_me_message"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginEnd="32dp"
          app:layout_constraintEnd_toEndOf="parent"
          android:id="@+id/checkBox"
          android:textColor="@color/colorPrimaryDark"
          android:layout_marginBottom="8dp"
          app:layout_constraintBottom_toTopOf="@+id/buttonSignIn" />

</android.support.constraint.ConstraintLayout>