<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent"
        android:background="@drawable/login_background_image"
        tools:context=".activities.SignUpActivity">

        <ImageView
            android:id="@+id/loginScreenBackgroundImageView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/login_background_image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <android.support.v7.widget.CardView
            android:id="@+id/cardViewAccountDetails"
            android:layout_margin="@dimen/margin_32dp"
            android:layout_width="match_parent"
            app:cardCornerRadius="@dimen/margin_8dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:cardElevation="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:layout_marginTop="@dimen/margin_16dp"
                    android:id="@+id/imageViewItinerariumLogo"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@mipmap/itinerarium_icon"
                    android:layout_gravity="center_horizontal" />

                <TextView
                    android:id="@+id/textViewAccountInfo"
                    android:textSize="@dimen/text_size_15sp"
                    android:textStyle="bold"
                    android:textColor="@color/color_black"
                    android:text="@string/account_info_sign_up"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/inputLayoutUsername"
                    android:layout_width="match_parent"
                    android:layout_margin="@dimen/margin_16dp"
                    android:layout_height="wrap_content"
                    android:theme="@style/TextInputLabelTheme">

                    <EditText
                        android:id="@+id/editTextUsername"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/username_hint"
                        tools:text="JohnDoeRocker"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:lines="1"
                        android:textSize="@dimen/text_size_15sp"
                        android:gravity="center_horizontal"
                        android:background="@drawable/btm_line_shape"
                        android:textColor="@color/color_black" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/inputLayoutEmail"
                    android:layout_width="match_parent"
                    android:layout_margin="@dimen/margin_16dp"
                    android:layout_height="wrap_content"
                    android:theme="@style/TextInputLabelTheme">

                    <EditText
                        android:id="@+id/editTextEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email_hint"
                        tools:text="JohnDoe@gmail.com"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:lines="1"
                        android:textSize="@dimen/text_size_15sp"
                        android:gravity="center_horizontal"
                        android:background="@drawable/btm_line_shape"
                        android:textColor="@color/color_black" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/inputLayoutPassword"
                    android:layout_width="match_parent"
                    android:layout_marginLeft="@dimen/margin_16dp"
                    android:layout_marginRight="@dimen/margin_16dp"
                    android:layout_marginTop="@dimen/margin_16dp"
                    android:layout_height="wrap_content"
                    android:theme="@style/TextInputLabelTheme">

                    <EditText
                        android:id="@+id/editTextPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password_hint"
                        android:inputType="textPassword"
                        tools:text="*************"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:lines="1"
                        android:textSize="@dimen/text_size_15sp"
                        android:gravity="center_horizontal"
                        android:background="@drawable/btm_line_shape"
                        android:textColor="@color/color_black" />
                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:textColor="@color/color_black"
                    android:textSize="@dimen/text_size_10sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/margin_16dp"
                    android:textAlignment="center"
                    android:layout_marginBottom="@dimen/margin_16dp"
                    android:text="@string/mandatory_fields"/>


            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/cardViewPersonalDetails"
            app:cardBackgroundColor="@color/colorPrimary"
            android:layout_margin="@dimen/margin_32dp"
            android:layout_width="match_parent"
            app:cardCornerRadius="@dimen/margin_8dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/cardViewAccountDetails"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:cardElevation="10dp"
            app:layout_constraintEnd_toEndOf="parent">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:layout_marginTop="@dimen/margin_16dp"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@mipmap/itinerarium_icon"
                    android:layout_gravity="center_horizontal" />

                <TextView
                    android:id="@+id/textViewPersonalInfo"
                    android:textSize="@dimen/text_size_15sp"
                    android:textStyle="bold"
                    android:textColor="@color/color_black"
                    android:text="@string/personal_info_sign_up"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/circleImageViewUserIcon"
                    android:layout_width="100dp"
                    android:layout_height="98dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/margin_16dp"
                    android:src="@drawable/user_photo_image" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/inputLayoutFirstName"
                    android:layout_width="match_parent"
                    android:layout_margin="@dimen/margin_16dp"
                    android:layout_height="wrap_content"
                    android:theme="@style/TextInputLabelThemeWhite">

                    <EditText
                        android:id="@+id/editTextFirstName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/first_name_hint"
                        tools:text="Alex"
                        android:backgroundTint="@color/color_black"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:lines="1"
                        android:textSize="@dimen/text_size_15sp"
                        android:gravity="center_horizontal"
                        android:background="@drawable/btm_line_shape"
                        android:textColor="@color/color_black" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/inputLayoutLastName"
                    android:layout_width="match_parent"
                    android:layout_margin="@dimen/margin_16dp"
                    android:layout_height="wrap_content"
                    android:theme="@style/TextInputLabelThemeWhite">

                    <EditText
                        android:id="@+id/editTextLastName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/last_name_hint"
                        tools:text="Iachimov"
                        android:backgroundTint="@color/color_black"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:lines="1"
                        android:textSize="@dimen/text_size_15sp"
                        android:gravity="center_horizontal"
                        android:background="@drawable/btm_line_shape"
                        android:textColor="@color/color_black" />
                </android.support.design.widget.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_16dp"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <Spinner
                        android:id="@+id/spinnerSignUpCountry"
                        android:layout_width="match_parent"
                        android:textAlignment="center"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                    <Spinner
                        android:id="@+id/spinnerSignUpCity"
                        android:layout_width="match_parent"
                        android:textAlignment="center"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_16dp"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <EditText
                        android:id="@+id/editTextBirthday"
                        android:clickable="true"
                        android:editable="false"
                        android:hint="@string/date_of_birth"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:layout_gravity="center_horizontal"
                        android:gravity="center_horizontal"
                        android:textColor="@color/color_white"
                        android:textColorHint="@color/color_white"
                        />

                </LinearLayout>

            </LinearLayout>


        </android.support.v7.widget.CardView>

        <Button
            android:text="@string/sign_up"
            android:layout_margin="@dimen/margin_24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_16dp"
            android:textColor="@color/color_white"
            android:background="@drawable/round_corners_button"
            app:layout_constraintTop_toBottomOf="@+id/cardViewPersonalDetails"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp"
            android:elevation="10dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" />

    </android.support.constraint.ConstraintLayout>

</ScrollView>